--- a/index.html
+++ b/index.html
@@ -3,32 +3,31 @@
     <head>
         <meta charset="utf-8">
         <title>Profile</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>Beranda</h1></td>
-        <table>
+    <body class="sansserif">
+        <h1>Beranda</h1>
+        <table id="special_table">
             <tr>
-                <td><a href="https://www.instagram.com/pratamaiwang/"><img src="iwang.jpeg" alt="profil diri iwang" height="150" width="100"></a></td>
-                <ul>
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="contact-me.html">Hubungi Saya</a></li>                
-                </ul>    
+                <td><a href="https://www.instagram.com/pratamaiwang/"><img class="foto" class="foto circular" src="iwang.jpeg" alt="profil diri iwang" height="300" width="225"></a></td>
+                <td id="profil">
+                    <ul>
+                    <li>Nama</li>
+                    <p><strong> Iwang Aryasatya Pratama</strong></p>
+                    <li>NIM</li>
+                    <p>195150200111006</p>
+                    <li>Jurusan</li>
+                    <p>Teknik Informatika</p>
+                    <li>Alamat</li>
+                    <p>JL. Segara Gang Klengkeng No. 87 Tongas Kulon, Tongas, Kab. Probolingggo</p>
+                    </ul>
+                </td>
             </tr> 
         </table>
-        <ul>
-            <li>Nama</li>
-            <p>Iwang Aryasatya Pratama</p>
-            <li>NIM</li>
-            <p>195150200111006</p>
-            <li>Jurusan</li>
-            <p>Teknik Informatika</p>
-            <li>Alamat</li>
-            <p>JL. Segara Gang Klengkeng No. 87 Tongas Kulon, Tongas, Kab. Probolingggo</p>
-        </ul>
-        <hr>
+        <hr id="garisutama">
         <h3>Pengalaman Organisasi</h3>
         <table cellspacing="0" cellpadding="10" border="1">
-            <thead>
+            <thead class="thead1">
                 <tr>
                     <th>Nomor</th>
                     <th align="left">Organisasi</th>
@@ -54,7 +53,7 @@
         <hr>
         <h3>Jenjang Pendidikan</h3>
         <table cellspacing="0" cellpadding="10" border="1">
-            <thead>
+            <thead class="thead2">
                 <th>Nomor</th>
                 <th align="left">Jenjang Pendidikan</th>
                 <th>Tahun</th>
@@ -88,7 +87,7 @@
         <hr>
         <h3>Mata Kuliah</h3>
         <table cellspacing="0" cellpadding="10" border="1">
-            <thead>
+            <thead class="thead3">
                 <th>Nomor</th>
                 <th align="left">Mata Kuliah</th>
                 <th>SKS</th>
@@ -131,5 +130,7 @@
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
         </table>
+            <a href="index.html">Beranda</a>
+            <a href="contact-me.html">Hubungi Saya</a> 
     </body>
 </html>
