--- a/contact-me.html
+++ b/contact-me.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Hubungi Saya</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="sansserif">
         <ul>
             <li><a href="index.html">Beranda</a></li>
             <li><a href="contact-me.html">Hubungi Saya</a></li>                
